--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"supertest": "^6.0.1"
 	},
 	"dependencies": {
-		"express": "^4.17.1"
+		"express": "^4.17.1",
+		"express-fileupload": "^1.2.0"
 	}
 }
